Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_toggleBar.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_toggleBar.scss
@@ -60,7 +60,7 @@
 }
 
 .open-content {
-  max-height: 2000px !important;
+  max-height: 99999px !important;
   overflow: visible!important;
 }
 
